--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    
+    <div class="jumbotron bg-dark">
+        <div class="container">
+          <h1 class="display-4 text-center text-white">Weather Dashboard</h1>
+        </div>
+    </div>
 
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
