--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </div>
     </div>
 
-    <div class="main container">
+    <div class="main container p-md-0">
         <div class="row">
             <div class="col-12 col-md-3" id="search">
                 <div class="form-group text-center border border-dark rounded p-2">
                     <label for="searchEl"><span class="font-weight-bold font-size">Search for a City:</span></label>
                     <input type="text" class="form-control" id="searchEl" placeholder="Enter location">
-                    <button type="submit" class="btn btn-primary mt-2 col-6 col-md-12 col-lg-6">Search</button>
+                    <button type="submit" class="btn btn-primary mt-3 col-6 col-md-12 col-lg-6">Search</button>
                 </div>
             </div>
             <div class="col-12 col-md-9 bg-primary" id="today">
