refactor search field id

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-12 col-md-3" id="search">
                 <div class="form-group text-center border border-dark rounded p-2">
                     <label for="searchEl"><span class="font-weight-bold font-size">Search for a City:</span></label>
-                    <input type="text" class="form-control" id="searchEl" placeholder="Enter location">
+                    <input type="text" class="form-control" id="search-el" placeholder="Enter location">
                     <button type="submit" class="btn btn-primary mt-3 col-6 col-md-12 col-lg-6">Search</button>
                 </div>
             </div>
