--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
     <div class="main container p-md-0">
         <div class="row">
-            <div class="col-12 col-md-3" id="search">
-                <div class="form-group text-center border border-dark rounded p-2">
+            <div class="col-12 col-md-3">
+                <form class="form-group text-center border border-dark rounded p-2"  id="search">
                     <label for="search-input"><span class="font-weight-bold font-size">Search for a City:</span></label>
                     <input type="text" class="form-control" id="search-input" placeholder="Enter location">
-                    <button type="submit" class="btn btn-primary mt-3 col-6 col-md-12 col-lg-6">Search</button>
-                </div>
+                    <button type="submit" class="btn btn-primary mt-3 col-6 col-md-12 col-lg-6" id="search-btn">Search</button>
+                </form>
             </div>
             <div class="col-12 col-md-9 bg-primary" id="today">
                 <h2><span id="location">This is your location</span></h2>
