comment out placeholder text

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </div>
         <div class="row">
             <div class="col-12 col-md-3" id="cities">
-                This is where the stored cities go
+                <!-- This is where the stored cities go -->
             </div>
             <div class="col-12 col-md-9" id="five-day">
-                This is where the five-day forecast goes
+                <!-- This is where the five day forecast goes -->
             </div>
         </div>
 
