add date to the page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </div>
             <div class="col-12 col-md-9 bg-primary" id="today">
                 <h2><span id="location">This is your location</span></h2>
+                <h3><span id="date">Today's date</span></h3>
                 <p>Temp: <span id="temp-now">Current temp</span></p>
                 <p>Wind: <span id="wind-now">Current wind speed</span></p>
                 <p>Humidity: <span id="humidity-now">Current humidity</span></p>
