--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                     <button type="submit" class="btn btn-primary mt-3 col-6 col-md-12 col-lg-6" id="search-btn">Search</button>
                 </form>
             </div>
-            <div class="col-12 col-md-9 bg-primary" id="today">
-                <h2><span id="location">This is your location</span></h2>
+            <div class="col-12 col-md-9 current p-3" id="today">
+                <h2><span id="location"></span></h2>
                 <h3>
-                    <span id="date">Today's date</span>
-                    <i></i>
+                    <span id="date">Today's Date</span>
+                    <img src="" alt="" height="50px" id="icon">
                 </h3>
                 <p>Temp: <span id="temp-now">Current temp</span></p>
                 <p>Wind: <span id="wind-now">Current wind speed</span></p>
