--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="col-12 col-md-3" id="cities">
                 <!-- This is where the stored cities go -->
             </div>
-            <div class="col-12 col-md-9" id="five-day">
+            <div class="col-12 col-md-9 row mx-auto" id="forecast">
                 <!-- This is where the five day forecast goes -->
             </div>
         </div>
