fix current weather styling

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div class="col-12 col-md-9 current p-3" id="today">
                 <h2><span id="location"></span></h2>
                 <h3>
-                    <span id="date">Today's Date</span>
-                    <img src="" alt="" height="50px" id="icon">
+                    <span id="date"></span>
+                    <img src="" alt="" height="100px" id="icon">
                 </h3>
                 <p>Temp: <span id="temp-now">Current temp</span></p>
                 <p>Wind: <span id="wind-now">Current wind speed</span></p>
