current weather block visible dynamically

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </section>
             <section class="col-9">
-                <div class="col-12 current p-3" id="today">
+                <div class="col-12 p-3" id="today">
                     <h2><span id="location"></span></h2>
                     <h3>
                         <span id="date"></span>
