make layout more responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main class="main container p-md-0">
         <div class="row">
-            <section class="col-3">
+            <section class="col-12 col-md-3">
                 <form class="form-group text-center border border-dark rounded p-2"  id="search">
                     <label for="search-input"><span class="font-weight-bold font-size">Search for a City:</span></label>
                     <input type="text" class="form-control" id="search-input" placeholder="Enter location">
@@ -31,7 +31,7 @@
                     <!-- This is where the stored cities go -->
                 </div>
             </section>
-            <section class="col-9">
+            <section class="col-12 col-md-9">
                 <div class="col-12 p-3" id="today">
                     <h2><span id="location"></span></h2>
                     <h3>
