--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <form class="form-group text-center border border-dark rounded p-2"  id="search">
                     <label for="search-input"><span class="font-weight-bold font-size">Search for a City:</span></label>
                     <input type="text" class="form-control" id="search-input" placeholder="Enter location">
-                    <button type="submit" class="btn btn-primary mt-3 col-6 col-md-12 col-lg-6" id="search-btn">Search</button>
+                    <button type="submit" class="btn btn-dark test-white mt-3 col-6 col-md-12 col-lg-6" id="search-btn">Search</button>
                 </form>
                 <div class="col-12" id="cities">
                     <!-- This is where the stored cities go -->
